<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_app_def_white">

    <io.agora.karaoke_view.v11.ScoringView
        android:id="@+id/scoringView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:background="#AA666666"
        app:initialScore="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pitchIndicatorRadius="6dp"
        app:pitchStickHeight="4dp"
        app:pitchStickHighlightedColor="#FF8AB4" />

    <io.agora.karaoke_view.v11.LyricsView
        android:id="@+id/lyricsView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#666666"
        android:paddingTop="14dp"
        app:currentLineHighlightedTextColor="#FF8AB4"
        app:currentLineTextColor="@color/white"
        app:currentLineTextSize="16sp"
        app:labelWhenNoLyrics="@string/app_no_lyric"
        app:layout_constraintTop_toBottomOf="@+id/scoringView"
        app:layout_constraintVertical_bias="0.0"
        app:lineSpacing="6dp"
        app:paddingTop="2dp"
        app:startOfVerseIndicatorPaddingTop="6dp"
        app:startOfVerseIndicatorRadius="4dp"
        app:textGravity="center"
        app:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnClose"
        tools:text="主唱" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChorusScene"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_333"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSinger"
        tools:text="独唱、小合唱 Channel:666" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@null"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLoadMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_load_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyricsView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRemoveMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_remove_music"
        app:layout_constraintStart_toEndOf="@+id/btLoadMusic"
        app:layout_constraintTop_toBottomOf="@+id/lyricsView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btLoadProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btRemoveMusic"
        app:layout_constraintStart_toEndOf="@+id/btRemoveMusic"
        app:layout_constraintTop_toTopOf="@+id/btRemoveMusic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btJoinChorus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_join_chorus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLoadMusic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLeaveChorus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_leave_chorus"
        app:layout_constraintStart_toEndOf="@+id/btJoinChorus"
        app:layout_constraintTop_toBottomOf="@+id/btLoadMusic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btOriginal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_original"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btJoinChorus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_acc"
        app:layout_constraintStart_toEndOf="@+id/btOriginal"
        app:layout_constraintTop_toBottomOf="@+id/btJoinChorus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDaoChang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_daochang"
        app:layout_constraintStart_toEndOf="@+id/btAcc"
        app:layout_constraintTop_toBottomOf="@+id/btJoinChorus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMicOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_mic_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOriginal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMicOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="@string/app_mic_off"
        app:layout_constraintStart_toEndOf="@+id/btMicOn"
        app:layout_constraintTop_toBottomOf="@+id/btOriginal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btMicStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btMicOff"
        app:layout_constraintStart_toEndOf="@+id/btMicOff"
        app:layout_constraintTop_toTopOf="@+id/btMicOff" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="暂停"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMicOn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/button_color_selector"
        android:text="播放"
        app:layout_constraintStart_toEndOf="@+id/btPause"
        app:layout_constraintTop_toBottomOf="@+id/btMicOn" />

</androidx.constraintlayout.widget.ConstraintLayout>